fix alignment for page

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -434,6 +434,7 @@ body.loading {
 .page__content {
 	float: left;
 	clear: both;
+	width: 100%;
 }
 
 
